add endpoint for checking roles
